force-app/main/default/objects/Operational_Incident__c/Operational_Incident__c.object-meta.xml
<CustomObject>
    <label>Operational Incident</label>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operational Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>