force-app/main/default/objects/Operational_Incident__c/fields/Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closure_Comments__c</fullName>
    <label>Closure Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>