force-app/main/default/objects/Operational_Incident__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>OI-{00000}</displayFormat>
    <label>Incident Number</label>
    <type>AutoNumber</type>
</CustomField>