force-app/main/default/objects/Operational_Incident__c/fields/MergeID__c.field-meta.xml
<CustomField>
    <fullName>MergeID__c</fullName>
    <description>created because the stupid email template merge field won&apos;t merge the standard id</description>
    <formula>Id</formula>
    <label>MergeID</label>
    <type>Text</type>
</CustomField>