force-app/main/default/objects/Operational_Incident__c/fields/Operations_Department__c.field-meta.xml
<CustomField>
    <fullName>Operations_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Department</label>
    <referenceTo>Operations_Department__c</referenceTo>
    <relationshipLabel>Operational Incidents</relationshipLabel>
    <relationshipName>Operational_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>