force-app/main/default/objects/Operational_Incident__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <formula>TEXT( CreatedBy.Village__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village</label>
    <type>Text</type>
</CustomField>