force-app/main/default/objects/Operational_Incident__c/validationRules/Closed_Incidents_must_have_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Incidents_must_have_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Completed&quot;)  
&amp;&amp; ISBLANK(Closure_Comments__c)</errorConditionFormula>
    <errorDisplayField>Closure_Comments__c</errorDisplayField>
    <errorMessage>You must enter closure comments before the Incident can be closed</errorMessage>
</ValidationRule>