force-app/main/default/objects/Operational_Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Village__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>