force-app/main/default/objects/Operational_Incident__c/listViews/All_Closed_Incidents.listView-meta.xml
<ListView>
    <fullName>All_Closed_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Closed Incidents</label>
</ListView>