force-app/main/default/objects/Operational_Incident__c/listViews/All_Open_Incidents_Bicester.listView-meta.xml
<ListView>
    <fullName>All_Open_Incidents_Bicester</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>All Open Incidents (Bicester)</label>
    <sharedTo>
        <group>Location_Bicester</group>
    </sharedTo>
</ListView>