force-app/main/default/objects/Operational_Incident__c/listViews/My_Incidents.listView-meta.xml
<ListView>
    <fullName>My_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Location__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Incidents</label>
</ListView>