force-app/main/default/objects/Operational_Incident__c/listViews/Ops_Bicester_Cleaning_Queue.listView-meta.xml
<ListView>
    <fullName>Ops_Bicester_Cleaning_Queue</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Ops Bicester Cleaning Queue</label>
    <queue>Ops_Bicester_Cleaners</queue>
</ListView>