force-app/main/default/objects/Operational_Incident__c/listViews/Ops_Bicester_Retail_Operational_Incident.listView-meta.xml
<ListView>
    <fullName>Ops_Bicester_Retail_Operational_Incident</fullName>
    <filterScope>Queue</filterScope>
    <label>Ops Bicester Retail</label>
    <queue>Ops_Bicester_Retail</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>