force-app/main/default/objects/Operational_Incident__c/listViews/Overdue_Incidents_Bicester.listView-meta.xml
<ListView>
    <fullName>Overdue_Incidents_Bicester</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Priority__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Overdue Incidents (Bicester)</label>
</ListView>